--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,70 @@
-.App {
+
+/* .FormEmployee {
+  width: 400px;
+  margin: 0 auto;
+  text-align: left;
+ }
+ 
+ .FormEmployee h1 {
   text-align: center;
+ }
+ 
+ .FormEmployee .form-data {
+  display: flex;
+  justify-content: center;
+  margin: 5px 0;
+ }
+ 
+ .FormEmployee .form-data label {
+  display: inline-block;
+  width: 75px;
+  margin-right: 10px;
+  text-align: right;
+ }
+ 
+ .FormEmployee .form-data input:not([type="submit"]) {
+  flex-grow: 1;
+ } */
+
+body {
+  background-color: orange;
+  
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.FormMovie {
+  width: 800px;
+  margin: 0 auto;
+  /* text-align: left; */
+ }
+ 
+ .FormMovie h1 {
+  text-align: center;
+ }
+ 
+.but {
+    height: 150%;
+    width: 60%;
+    margin: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+
+ 
+ .FormMovie .form-data {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+  margin: 5px 0;
+  
+ }
+ 
+ .FormMovie .form-data label    {
+  margin-right: 10px;
+  text-align: left;
+  font-weight:bold;
+  font-size: 150%;
+ }
+ 
+ .FormMovie .form-data input:not([type="submit"]) {
+  flex-grow: 1;
+ }
